Tests/Negative/ContinueOutsideLoop.mr
fun main(): i32 {
    continue; // Error: 'continue' outside of loop
    return 0;
}
